--- a/AskMate/AskMate/Views/Home/Index.cshtml
+++ b/AskMate/AskMate/Views/Home/Index.cshtml
@@ -2,7 +2,28 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-</div>
+<html>
+    <head>
+        <title>AskMate HomePage</title>
+        <link rel="stylesheet" href="~/css/Index.css">
+    </head>
+
+    <body>
+        <ul class="navbar">
+            <a href="/Home/Privacy" class="button">List Questions</a>
+            <a href="/Home/Privacy" class="button disabled">Display a Question</a>
+            <a href="/Home/Privacy" class="button disabled">Ask a question</a>
+            <a href="/Home/Privacy" class="button disabled">Post an answer</a>
+            <a href="/Home/Privacy" class="button disabled">Sort questions</a>
+            <a href="/Home/Privacy" class="button disabled">Delete question</a>
+            <a href="/Home/Privacy" class="button disabled">Add image</a>
+            <a href="/Home/Privacy" class="button disabled">Edit a question</a>
+            <a href="/Home/Privacy" class="button disabled">Delete an answer</a>
+            <a href="/Home/Privacy" class="button disabled">Vote on questions</a>
+            <a href="/Home/Privacy" class="button disabled">Vote on answers</a>
+
+            <button class="button" style="vertical-align:middle"><span>Hover </span></button>
+        </ul>
+    </body>
+
+</html>
