--- a/AskMate/AskMate/Views/Home/Index.cshtml
+++ b/AskMate/AskMate/Views/Home/Index.cshtml
@@ -9,21 +9,12 @@
     </head>
 
     <body>
-        <ul class="navbar">
-            <a href="/Home/Privacy" class="button">List Questions</a>
-            <a href="/Home/Privacy" class="button disabled">Display a Question</a>
-            <a href="/Home/Privacy" class="button disabled">Ask a question</a>
-            <a href="/Home/Privacy" class="button disabled">Post an answer</a>
-            <a href="/Home/Privacy" class="button disabled">Sort questions</a>
-            <a href="/Home/Privacy" class="button disabled">Delete question</a>
-            <a href="/Home/Privacy" class="button disabled">Add image</a>
-            <a href="/Home/Privacy" class="button disabled">Edit a question</a>
-            <a href="/Home/Privacy" class="button disabled">Delete an answer</a>
-            <a href="/Home/Privacy" class="button disabled">Vote on questions</a>
-            <a href="/Home/Privacy" class="button disabled">Vote on answers</a>
-
-            <button class="button" style="vertical-align:middle"><span>Hover </span></button>
-        </ul>
+        @foreach (Question question in new IDAO_Impl().GetQuestions())
+        {
+            <a>(@question.Id).</a>
+            <a>@question.Content</a>
+            <br>
+        }
     </body>
 
 </html>
