--- a/AskMate/AskMate/Views/Home/QuestionResponse.cshtml
+++ b/AskMate/AskMate/Views/Home/QuestionResponse.cshtml
@@ -1,8 +1,10 @@
-﻿
-@{
+﻿@{
     ViewData["Title"] = "QuestionResponse";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 <h1>QuestionResponse</h1>
 
+@model AskMate.QuestionModel
+
+<p>@Model.Content</p>
