--- a/AskMate/AskMate/Views/Home/Index.cshtml
+++ b/AskMate/AskMate/Views/Home/Index.cshtml
@@ -26,7 +26,7 @@
                 @Html.DisplayFor(modelItem => question.Content)
             </td>
             <td>
-                @Html.ActionLink("Edit", "question", new { id = question.Id }) |
+                @Html.ActionLink("Edit", "edit", new { id = question.Id }) |
                 @Html.ActionLink("Details", "question", new { id = question.Id }) |
                 @Html.ActionLink("Delete", "Delete", new { id = question.Id })
             </td> 
