--- a/AskMate/AskMate/Views/Home/Edit.cshtml
+++ b/AskMate/AskMate/Views/Home/Edit.cshtml
@@ -1,7 +1,17 @@
-﻿
+﻿@model AskMate.QuestionModel
 @{
     ViewData["Title"] = "Edit";
 }
 
-<h1>Edit</h1>
-
+<h1>Edit - @Model.Content</h1>
+<form method="post" action="">
+    <div class="form-group">
+        <label for="">ID</label>
+        <input type="number" class="form-control" id="" placeholder="@Model.Id">
+    </div>
+    <div class="form-group">
+        <label for="">Question</label>
+        <input type="text" class="form-control" id="" value="@Model.Content">
+    </div>
+    <button type="submit" class="btn btn-success">Edit</button>
+</form>
