Add AnswerModel and ++

--- a/AskMate/AskMate/Views/Home/Index.cshtml
+++ b/AskMate/AskMate/Views/Home/Index.cshtml
@@ -27,7 +27,7 @@
             </td>
             <td>
                 @Html.ActionLink("Edit", "edit", new { id = question.Id }) |
-                @Html.ActionLink("Details", "question", new { id = question.Id }) |
+                @Html.ActionLink("Details", "details", new { id = question.Id }) |
                 @Html.ActionLink("Delete", "Delete", new { id = question.Id })
             </td> 
         </tr>
