--- a/AskMate/AskMate/Views/Home/QuestionResponse.cshtml
+++ b/AskMate/AskMate/Views/Home/QuestionResponse.cshtml
@@ -1,4 +1,4 @@
-﻿@model AskMate.QuestionModel
+﻿@model AskMate.Models.QuestionModel
 @{
     ViewData["Title"] = "QuestionResponse";
     Layout = "~/Views/Shared/_Layout.cshtml";
