--- a/AskMate/AskMate/Views/Home/Details.cshtml
+++ b/AskMate/AskMate/Views/Home/Details.cshtml
@@ -3,12 +3,10 @@
     ViewData["Title"] = "Deatails";
 }
 
-@foreach (QuestionModel item in new IDAO_Impl().GetQuestions())
-{
-    <ul class="nav-tabs">
-        <p>ID: @item.Id</p>
-        <p>Content: @item.Content</p>
-        <p>Answer: @item.Answer</p>
-    </ul>
-}
+<ul class="nav-tabs">
+    <h3>(@Model.Id) - <u>@Model.Title</u></h3>
+    <p>Content: @Model.Content</p>
+    <p>Img:</p>
+    <img src=@Model.ImgLink style="width:142px;height:142px;">
+</ul>
 
