--- a/AskMate/AskMate/Views/Home/Index.cshtml
+++ b/AskMate/AskMate/Views/Home/Index.cshtml
@@ -23,7 +23,7 @@
                 @Html.DisplayFor(modelItem => question.Id)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => question.Content)
+                @Html.DisplayFor(modelItem => question.Title)
             </td>
             <td>
                 @Html.ActionLink("Edit", "edit", new { id = question.Id }) |
