added ratings next to Title in home/index

--- a/AskMate/AskMate/Views/Home/Index.cshtml
+++ b/AskMate/AskMate/Views/Home/Index.cshtml
@@ -24,6 +24,7 @@
             </td>
             <td>
                 @Html.DisplayFor(modelItem => question.Title)
+                <span class="badge badge-primary badge-pill">@question.Rate
             </td>
             <td>
                 @Html.ActionLink("Edit", "edit", new { id = question.Id }) |
