--- a/AskMate/AskMate/Views/Home/Index.cshtml
+++ b/AskMate/AskMate/Views/Home/Index.cshtml
@@ -24,7 +24,7 @@
             </td>
             <td>
                 @Html.DisplayFor(modelItem => question.Title)
-                <span class="badge badge-primary badge-pill">@question.Rate
+                <span class="badge badge-primary badge-pill">@question.Rate</span>
             </td>
             <td>
                 @Html.ActionLink("Edit", "edit", new { id = question.Id }) |
