--- a/AskMate/AskMate/Views/Home/Edit.cshtml
+++ b/AskMate/AskMate/Views/Home/Edit.cshtml
@@ -22,5 +22,9 @@
     @Html.TextBoxFor(m => m.Content, new { @class = "form-control" })
 </div>
 <button type="submit" class="btn btn-success">Edit</button>
-
+<div class="float-right">
+    <span>
+        @Html.ActionLink("Back", "Index", "Home", null, new { @class = "btn btn-danger ml-auto mr-1" })
+    </span>
+</div>
 }
