--- a/AskMate/AskMate/Views/Shared/_Layout.cshtml
+++ b/AskMate/AskMate/Views/Shared/_Layout.cshtml
@@ -6,6 +6,8 @@
     <title>@ViewData["Title"] - AskMate</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
+    <!--<link rel="stylesheet" href="~/css/table.css" />-->
+    <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/v/bs4/dt-1.10.20/datatables.min.css" />
 </head>
 <body>
     <header>
@@ -31,8 +33,8 @@
                             null,         // action parameters aka route values
                             new { @class = "btn btn-success ml-auto mr-1" })
                     </ul>
-                        
-                    
+
+
                 </div>
             </div>
         </nav>
@@ -51,6 +53,8 @@
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
+    <script src="~/js/table.js" asp-append-version="true"></script>
+    <script type="text/javascript" src="https://cdn.datatables.net/v/bs4/dt-1.10.20/datatables.min.js"></script>
     @RenderSection("Scripts", required: false)
 </body>
 </html>
