--- a/AskMate/AskMate/Views/Home/Details.cshtml
+++ b/AskMate/AskMate/Views/Home/Details.cshtml
@@ -6,7 +6,11 @@
 
 
 <ul class="list-group">
-    <li class="list-group-item list-group-item-info d-flex justify-content-between align-items-center"><h3>(@Model.Id) - @Model.Title</h3><span class="badge badge-primary badge-pill">@Model.Rate</span></li>
+    <li class="list-group-item list-group-item-info d-flex justify-content-between align-items-center">
+        <h3>#@Model.Id - @Model.Title</h3>
+        <a>@Model.Date</a>
+        <span class="badge badge-primary badge-pill">@Model.Rate</span>
+    </li>
     <li class="list-group-item">Content: @Model.Content</li>
     <li class="list-group-item">Img: <img src=@Model.ImgLink style="width:142px;height:142px;" /></li>
 </ul>
