--- a/AskMate/AskMate/Views/Home/Index.cshtml
+++ b/AskMate/AskMate/Views/Home/Index.cshtml
@@ -29,8 +29,8 @@
             </td>
             <td>
                 @Html.ActionLink("Edit", "edit", new { id = question.Id }) |
-                @Html.ActionLink("Details", "details", new { id = question.Id }) |
-                @Html.ActionLink("Delete", "Delete", new { id = question.Id })
+                @Html.ActionLink("Question", "question", new { id = question.Id }) |
+                @Html.ActionLink("Delete", "delete", new { id = question.Id })
             </td> 
         </tr>
     }
