--- a/AskMate/AskMate/Views/Home/Question.cshtml
+++ b/AskMate/AskMate/Views/Home/Question.cshtml
@@ -1,6 +1,6 @@
 ﻿@model AskMate.Models.QuestionModel
 @{
-    ViewData["Title"] = "Deatails";
+    ViewData["Title"] = "Details";
 }
 <link rel="stylesheet" href="~/css/Index.css">
 
