--- a/AskMate/AskMate/Views/Home/Index.cshtml
+++ b/AskMate/AskMate/Views/Home/Index.cshtml
@@ -3,7 +3,7 @@
 }
 @model AskMate.Controllers.HomeController
 
-<table class="table"  id="mainTable">
+<table class="table table-hover table-dark" id="mainTable">
     <thead>
         <tr>
             <th class="th-sm">
@@ -30,9 +30,31 @@
             <td>
                 @Html.ActionLink("Edit", "edit", new { id = question.Id }) |
                 @Html.ActionLink("Question", "question", new { id = question.Id }) |
-                @Html.ActionLink("Delete", "delete", new { id = question.Id })
-            </td> 
+                @Html.ActionLink("Delete", "Modal", "Home", new { id = question.Id }, new { data_target = "#MyModal", data_toggle = "modal" })
+                
+            </td>
         </tr>
-    }
 
+    }
 </table>
+
+<div class="container">
+    
+    <div class="modal" id="MyModal" role="dialog">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h4>Delete</h4>
+                    <button class="close" data-dismiss="modal">&times;</button>
+                </div>
+                <div class="modal-body">
+                    <p>Are you sure you want to delete the item.Title? With the id of item.Id</p>
+                </div>
+                <div class="modal-footer">
+                    <button class="btn btn-success">Yes</button>
+                    <button class="btn btn-primary" data-dismiss="modal">Clsoe</button>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
