--- a/AskMate/AskMate/Views/Home/QuestionResponse.cshtml
+++ b/AskMate/AskMate/Views/Home/QuestionResponse.cshtml
@@ -12,7 +12,7 @@
             <th>@Model.Content</th>
         </tr>
         <tr>
-            <td>@Model.Answer</td>
+            <td>@Model.Answers</td>
         </tr>
     </tbody>
 </table>
