--- a/AskMate/AskMate/Views/Home/Question.cshtml
+++ b/AskMate/AskMate/Views/Home/Question.cshtml
@@ -15,16 +15,12 @@
     <li class="list-group-item">Img: <img src=@Model.ImgLink style="width:142px;height:142px;" /></li>
 
     <li class="list-group-item">
-        <form method="post">
+        @using (Html.BeginForm("NewAnswer/"+Model.Id, "Home", FormMethod.Post))
+        {
             <label>Add an answer:</label>
-            <textarea id="textbox" name="message" required></textarea>
+            <textarea id="textbox" name="answer" required></textarea>
             <input type="submit" value="Submit">
-        </form>
+        }
     </li>
-
-    @foreach (AnswerModel answer in Model.GetAnswers())
-    {
-
-    }
 </ul>
 <button class="btn btn-info" onclick="window.location.href='/Home'">Back to questions</button>
