--- a/AskMate/AskMate/wwwroot/css/Index.css
+++ b/AskMate/AskMate/wwwroot/css/Index.css
@@ -16,9 +16,21 @@
     cursor: pointer;
 }
 
-    .button:hover {
-        opacity: 1
-    }
+.button:hover {
+    opacity: 1
+}
+
+.btn-rate
+{
+  padding: 6px;
+  opacity: 0.77;
+}
+
+.btn-rate:hover
+{
+  opacity: 1;
+  cursor: pointer;
+}
 
 .disabled {
     opacity: 0.6;
