--- a/AskMate/AskMate/Views/Home/Question.cshtml
+++ b/AskMate/AskMate/Views/Home/Question.cshtml
@@ -14,8 +14,8 @@
     <li class="list-group-item">Content: @Model.Content</li>
     <li class="list-group-item">Img: <img src=@Model.ImgLink style="width:142px;height:142px;" /></li>
 
-    <li class="list-group-item">
-        @using (Html.BeginForm("NewAnswer"+Model.Id, "Home", FormMethod.Post))
+    <li class="list-group-item">  
+        @using (Html.BeginForm("NewAnswer/"+Model.Id, "Home", FormMethod.Post))
         {
             <label>Add an answer:</label>
             <textarea name="answer" required></textarea>
