--- a/AskMate/AskMate/Views/Home/Question.cshtml
+++ b/AskMate/AskMate/Views/Home/Question.cshtml
@@ -20,10 +20,11 @@
     <li class="list-group-item">Img: <img src=@Model.ImgLink style="width:142px;height:142px;" /></li>
 
     <li class="list-group-item">
-        @using (Html.BeginForm("NewAnswer"+Model.Id, "Home", FormMethod.Post))
+        @using (Html.BeginForm("NewAnswer", "Home", FormMethod.Post))
         {
             <label>Add an answer:</label>
             <textarea name="answer" required></textarea>
+            <input name="id" type="hidden" value="@Model.Id" />
             <input type="submit" value="Submit">
         }
     </li>
