--- a/AskMate/AskMate/Views/Home/Index.cshtml
+++ b/AskMate/AskMate/Views/Home/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@{
     ViewData["Title"] = "Home Page";
 }
-@model AskMate.Controllers.HomeController
+@model IDAO_Impl
 
 <table class="table table-hover table-dark" id="mainTable">
     <thead>
@@ -17,7 +17,7 @@
             </th>
         </tr>
     </thead>
-    @foreach (QuestionModel question in new IDAO_Impl().GetQuestions())
+    @foreach (QuestionModel question in Model.GetQuestions())
     {
         <tr>
             <td>
