--- a/AskMate/AskMate/Views/Home/Question.cshtml
+++ b/AskMate/AskMate/Views/Home/Question.cshtml
@@ -34,8 +34,10 @@
         {
             foreach (AnswerModel answer in Model.GetAnswers())
             {
-                <a>@answer.Id - @answer.Content</a>
+                <a>@answer.Date</a>
                 <br>
+                <a>@answer.Id - @answer.Content</a>
+                <br><br>
             }
         }
     </li>
