--- a/AskMate/AskMate/Views/Home/Index.cshtml
+++ b/AskMate/AskMate/Views/Home/Index.cshtml
@@ -31,8 +31,7 @@
             <td>
                 @Html.ActionLink("Edit", "edit", new { id = question.Id }) |
                 @Html.ActionLink("Question", "question", new { id = question.Id }) |
-                @Html.ActionLink("Delete", "Modal", "Home", new { id = question.Id }, new { data_target = "#MyModal", data_toggle = "modal" })
-                <button id="ModalId" onclick="viewModal(@question.Id)">test</button>
+                <a href="#" class="text-danger" id="ModalId" onclick="viewModal(@question.Id)">Delete</a>
             </td>
         </tr>
     }
@@ -52,7 +51,7 @@
                 </div>
                 <div class="modal-footer">
                     <button class="btn btn-danger">Yes</button>
-                    <button class="btn btn-primary" data-dismiss="modal">Clsoe</button>
+                    <button class="btn btn-primary" data-dismiss="modal">Close</button>
                 </div>
             </div>
         </div>
