--- a/AskMate/AskMate/Views/Home/Index.cshtml
+++ b/AskMate/AskMate/Views/Home/Index.cshtml
@@ -41,18 +41,8 @@
 <div class="container">
     <div class="modal" id="MyModal" role="dialog">
         <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h4>Delete</h4>
-                    <button class="close" data-dismiss="modal">&times;</button>
-                </div>
-                <div class="modal-body">
-                    <div id="showresults"></div>
-                </div>
-                <div class="modal-footer">
-                    <button class="btn btn-danger">Yes</button>
-                    <button class="btn btn-primary" data-dismiss="modal">Close</button>
-                </div>
+            <div class="modal-content" id="showresults">
+                
             </div>
         </div>
     </div>
