--- a/AskMate/AskMate/Views/Shared/_ModalPartialView.cshtml
+++ b/AskMate/AskMate/Views/Shared/_ModalPartialView.cshtml
@@ -8,6 +8,6 @@
     <p>Are you sure you want to delete the '@Model.Title'? With the id of '@Model.Id'</p>
 </div>
 <div class="modal-footer">
-    <button class="btn btn-danger">Yes</button>
+    <button asp-action="" class="btn btn-danger">Yes</button>
     <button class="btn btn-primary" data-dismiss="modal">Close</button>
 </div>
