--- a/AskMate/AskMate/Views/Shared/_ModalPartialView.cshtml
+++ b/AskMate/AskMate/Views/Shared/_ModalPartialView.cshtml
@@ -7,7 +7,11 @@
 <div class="modal-body">
     <p>Are you sure you want to delete the '@Model.Title'? With the id of '@Model.Id'</p>
 </div>
-<div class="modal-footer">
-    <button asp-action="" class="btn btn-danger">Yes</button>
+<div class="modal-footer" id="testarea">
+    @using (Html.BeginForm("Moddel", "Home", FormMethod.Post))
+    {
+        <input type="hidden" class="form-control" id="message-text" name="@Model.Id"/>
+        <button type="submit" class="btn btn-danger">Yes</button>
+    }
     <button class="btn btn-primary" data-dismiss="modal">Close</button>
 </div>
