--- a/AskMate/AskMate/Views/Shared/_ModalPartialView.cshtml
+++ b/AskMate/AskMate/Views/Shared/_ModalPartialView.cshtml
@@ -10,7 +10,7 @@
 <div class="modal-footer" id="testarea">
     @using (Html.BeginForm("Moddel", "Home", FormMethod.Post))
     {
-        <input type="hidden" class="form-control" id="message-text" name="@Model.Id"/>
+        <input type="hidden" class="form-control" id="message-text" name="id" value="@Model.Id"/>
         <button type="submit" class="btn btn-danger">Yes</button>
     }
     <button class="btn btn-primary" data-dismiss="modal">Close</button>
