--- a/AskMate/AskMate/Views/Home/Index.cshtml
+++ b/AskMate/AskMate/Views/Home/Index.cshtml
@@ -14,6 +14,9 @@
                 Question
             </th>
             <th>
+                Points
+            </th>
+            <th>
                 Actions
             </th>
         </tr>
@@ -26,6 +29,8 @@
             </td>
             <td>
                 @Html.DisplayFor(modelItem => question.Title)
+            </td>
+            <td>
                 <span class="badge badge-primary badge-pill">@question.Vote</span>
             </td>
             <td>
