--- a/AskMate/AskMate/Views/Home/Question.cshtml
+++ b/AskMate/AskMate/Views/Home/Question.cshtml
@@ -78,6 +78,7 @@
                     <div class="card-header">
                         #@answer.Id
                         <span class="float-right">
+                            <a href="#" class="text-danger">Delete</a>
                             <button id="downVote" class="btn bg-transparent btn-vote text-danger" onclick="location.href='@Url.Action("DownVote", "Home", new {id = @Model.Id})'" title="Downvote">
                                 <span class="oi oi-chevron-bottom downvote"></span>
                             </button>
