Add view to question

--- a/AskMate/AskMate/Views/Home/Question.cshtml
+++ b/AskMate/AskMate/Views/Home/Question.cshtml
@@ -1,6 +1,7 @@
 ﻿@model AskMate.Models.QuestionModel
 @{
     ViewData["Title"] = "Details";
+    Model.IncreaseView();
 }
 
 <link rel="stylesheet" href="~/css/Index.css">
