--- a/AskMate/AskMate/Views/Home/Index.cshtml
+++ b/AskMate/AskMate/Views/Home/Index.cshtml
@@ -10,13 +10,13 @@
             <th class="th-sm">
                 #ID
             </th>
-            <th class="th-sm">
+            <th class="th-sm text-center">
                 Question
             </th>
-            <th>
+            <th class="text-center">
                 Points
             </th>
-            <th>
+            <th class="text-center">
                 Actions
             </th>
         </tr>
@@ -27,13 +27,13 @@
             <td class="">
                 @Html.DisplayFor(modelItem => question.Id)
             </td>
-            <td>
+            <td class="text-center">
                 @Html.ActionLink(question.Title, "question", new { id = question.Id })
             </td>
-            <td>
+            <td class="text-center">
                 <span class="badge badge-primary badge-pill">@question.Vote</span>
             </td>
-            <td>
+            <td class="text-center">
                 @Html.ActionLink("Edit", "edit", new { id = question.Id }, new { @class = "text-success" }) |
                 <a href="#" class="text-danger" id="ModalId" onclick="viewModal(@question.Id)">Delete</a>
             </td>
