--- a/AskMate/AskMate/Views/Home/Question.cshtml
+++ b/AskMate/AskMate/Views/Home/Question.cshtml
@@ -36,7 +36,7 @@
                         <label class="custom-file-label">Browse</label>
                     </div>
                 </div>
-                <button type="submit">Upload</button>
+                <button class="btn btn-info" type="submit">Upload</button>
 
             </div>
             <!--<img src="ViewData["FileLocation"]" width="600" height="400"/>
