--- a/AskMate/AskMate/Views/Home/Question.cshtml
+++ b/AskMate/AskMate/Views/Home/Question.cshtml
@@ -88,7 +88,7 @@
                     </div>
                     <div class="card-body">
                         @{
-                            if (answer.ImgLink != "")
+                            if (answer.ImgLink != "N/A")
                             {
                                 <a class="float-right" data-toggle="lightbox" href="@answer.ImgLink">
                                     <img height="100 px" width="100 px" class="img-fluid" src="@answer.ImgLink">
