--- a/AskMate/AskMate/Views/Home/Question.cshtml
+++ b/AskMate/AskMate/Views/Home/Question.cshtml
@@ -44,7 +44,7 @@
         </form>
         
         @{
-            if (Model.ImgLink.Length < 57)
+            if (Model.ImgLink == null)
             {
                 <p>No image uploaded</p>
             }
